PyMaker/datas/object2/RawHTML/i8501/Python_DOC_referPages.how-to-create-empty-file-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/12654772/create-empty-file-using-python">Create empty file using python [duplicate]</a>
<span class="question-originals-answer-count">
                    2 answers
                </span>
</li>
</ul>
</div>
<p>I would like to create an empty file in Python. But I have difficulty creating one..Below is the Python code I used to create but it gives me error:</p>
<pre><code>gdsfile  = "/home/hha/temp.gds"
if not (os.path.isfile(gdsfile)):
    os.system(touch gdsfile)
</code></pre>
<p>Error I got:
 File "/home/hha/bin/test.py", line 29
    os.system(touch gdsfile)
                          ^
SyntaxError: invalid syntax</p>
<p>But from the command line, I am able to create new file using: touch </p>
<p>Thank you very much for your help
Howard</p>
</div>
<div class="post-text" itemprop="text">
<p>First you have a syntax error because <code>os.system()</code> expects a string argument and you have not provided one. This will fix your code:</p>
<pre><code>os.system('touch {}'.format(gdsfile))
</code></pre>
<p>which constructs a string and passes it to <code>os.system()</code>.</p>
<p>But a better way (in Python &gt;= 3.3) is to simply open the file using the <a href="https://docs.python.org/3/library/functions.html#open" rel="noreferrer"><code>open()</code></a> builtin:</p>
<pre><code>gdsfile  = "/home/hha/temp.gds"
try:
   open(gdsfile, 'x')
except FileExistsError:
   pass
</code></pre>
<p>This specifies mode <code>x</code> which means exclusive creation - the operation will fail if the file already exists, but create it if it does not.</p>
<p>This is safer than using <code>os.path.isfile()</code> followed by <code>open()</code> because it avoids the potential race condition where the file might be created by another process in between the check and the create.</p>
<hr/>
<p>If you are using Python 2, or an earlier version of Python 3, you can use <a href="https://docs.python.org/2/library/os.html#os.open" rel="noreferrer"><code>os.open()</code></a> to open the file with the exclusive flag.</p>
<pre><code>import os
import errno

gdsfile  = "/home/hha/temp.gds"
try:
    os.close(os.open(gdsfile, os.O_CREAT|os.O_EXCL))
except OSError as exc:
    if exc.errno != errno.EEXIST:
        raise
</code></pre>
</div>
<span class="comment-copy">The argument to <code>os.system</code> needs to be a string.  That's not what you're passing right now.  Also, there's no reason to call out to the <code>touch</code> command when you could just use Python's own <code>open</code> method.</span>
<span class="comment-copy">I suggest adding the 'with' in front of the 'open', so that it will automatically clean up the returned file handle, e.g. ' with open(gdsfile, 'x') as touched_file: pass'</span>
